--- a/index.html
+++ b/index.html
@@ -190,20 +190,26 @@ strict.dtd">
 
 <!-- START musicModal -->
 <div id="musicModal" class="modal">
-  <div class="modal-content">
-    <span class="close">&times;</span>
-
-    <h1> Music </h1>
-    <h2>Adolf Fredik's Music School</h2</h2>
-      <p>I attended AF and got to sing choral music at the biggest venues in Stockholm. There were extra auditions for the Royal Opera and I managed to make two. Puccini's Tosca and La bohème.
-      </p> 
-
+   <div class="modal-content">
+      <span class="close">&times;</span>
+      <h1> Music </h1>
+      <h2>Adolf Fredik's Music School</h2>
+      <p>
+         I attended AF and got to sing choral music at the biggest venues in
+         Stockholm. There were extra auditions for the Royal Opera and I
+         managed to make two. Puccini's Tosca and La bohème.
+      </p>
       <h2>Electronic Music</h2>
-  </h2>
-      I produced music and DJ:ed under the name of Phillip Mox at some of the biggest venues in Stockholm and also did appearances in Berlin and Uppsala. Click <a href="https://soundcloud.com/phillip-mox" target="_blank" >here</a> to hear some of my songs.
-
-    </p>
-  </div>
+      <p>
+         I produced music and DJ:ed under the name of Phillip Mox at some of
+         the biggest venues in Stockholm and also did appearances in Berlin
+         and Uppsala. Click{" "}
+         <a href="https://soundcloud.com/phillip-mox" target="_blank">
+         here
+         </a>{" "}
+         to hear some of my songs.
+      </p>
+   </div>
 </div>
 <!-- END musicModal -->
 
