--- a/index.html
+++ b/index.html
@@ -203,11 +203,7 @@ strict.dtd">
       <p>
          I produced music and DJ:ed under the name of Phillip Mox at some of
          the biggest venues in Stockholm and also did appearances in Berlin
-         and Uppsala. Click{" "}
-         <a href="https://soundcloud.com/phillip-mox" target="_blank">
-         here
-         </a>{" "}
-         to hear some of my songs.
+         and Uppsala. Click <a href="https://soundcloud.com/phillip-mox" target="_blank">here</a> to hear some of my songs.
       </p>
    </div>
 </div>
