--- a/index.html
+++ b/index.html
@@ -61,7 +61,7 @@ strict.dtd">
 
         <h2> The Biological Museum</h2>
         <p>
-          I've always been interested in art and when I worked at the Biological Museum in Stockholm during my studies we hosted art shows such as <a href="http://belenius.com/exhibitions/biotop-2014/" target="_blank" >Biotop</a> by Galleri Niklas Belenius, photo shoots with famous photographers (such as Nan Goldin) and events advertising agencies (such as Studio Total).
+          I've always been interested in art and when I worked at the Biological Museum in Stockholm during my studies we hosted art shows such as Biotop by Galleri Niklas Belenius, photo shoots with famous photographers (such as Nan Goldin) and events advertising agencies (such as Studio Total).
       </p>
   </div>
 </div>
